NEWS/ChangeLog for itertools
----------------------------

0.1-1   2010-1-XX
    o	added ichunk function

0.1	2009-12-29
    o	project created on r-forge